--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.1"
+    "@nuxtjs/google-fonts": "^3.0.2",
+    "nuxt": "^3.7.1",
+    "nuxt-icon": "^0.5.0",
+    "sass": "^1.66.1",
+    "vuetify": "^3.3.16"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.2.96",
+    "vite-plugin-vuetify": "^1.0.2"
   }
 }
