--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "docker:build": "docker compose up --build",
+    "docker:builddev": "docker compose -f docker-compose.dev.yml build --no-cache",
+    "docker:devup": "docker compose -f docker-compose.dev.yml up",
+    "docker:devdown": "docker compose -f docker-compose.dev.yml down",
+    "docker:devrestart": "docker compose -f docker-compose.dev.yml restart"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -18,6 +23,10 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@types/mssql": "^9.1.1",
+    "mssql": "^10.0.1",
+    "semver": "^7.5.4",
+    "typescript": "^5.2.2",
     "vite-plugin-vuetify": "^1.0.2"
   }
 }
